--- a/OlamaEventSourceSpringBoot/src/main/resources/application.properties
+++ b/OlamaEventSourceSpringBoot/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=OlamaEventSourceSpringBoot
 # PostgreSQL Configuration
 spring.datasource.url=jdbc:postgresql://192.168.15.6:5432/rag_database_3
 spring.datasource.username=postgres
-spring.datasource.password=XXXXXXXXX
+spring.datasource.password=XXXXXXXX
 spring.datasource.database=rag_database_3
 spring.datasource.port=5432
 spring.datasource.host=192.168.15.6
@@ -20,11 +20,11 @@ rag.embedding.host=192.168.15.6
 rag.embedding.server.port=11434
 
 #OracleSQL
-oracle.datasource.username=XXXXXXXXX
-oracle.datasource.password=XXXXXXXXX
-oracle.datasource.database=XXXXXXXXX
+oracle.datasource.username=XXXXX
+oracle.datasource.password=XXXXX
+oracle.datasource.database=XXXXXX
 oracle.datasource.port=1521
-oracle.datasource.host=XXX.XXX.XXX.XXX
+oracle.datasource.host=192.168.241.141
 
 
 # JPA Configuration
